[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game_scenes/Hud/Inventory/slot_container.gd" type="Script" id=1]
[ext_resource path="res://Art_resources/Items/wood.png" type="Texture" id=2]
[ext_resource path="res://Art_resources/Items/item_box.png" type="Texture" id=3]
[ext_resource path="res://Game_scenes/Hud/Inventory/item.gd" type="Script" id=4]
[ext_resource path="res://Game_scenes/Hud/Inventory/detection.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 1.79466

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.7006, 28.6339 )

[node name="slot_container" type="Panel"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_sprite" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 2.0
margin_bottom = 3.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="z_index" type="Node2D" parent="."]

[node name="item" type="Panel" parent="z_index"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_sprite" type="NinePatchRect" parent="z_index/item"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_quantity" type="Label" parent="z_index/item"]
margin_left = 34.0
margin_top = 46.0
margin_right = 59.0
margin_bottom = 60.0
text = "0"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_name" type="Label" parent="z_index/item"]
visible = false
margin_left = -0.750637
margin_top = 49.1578
margin_right = 39.2493
margin_bottom = 63.1578
text = "None"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cursor" type="Area2D" parent="z_index/item"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="z_index/item/cursor"]
position = Vector2( 30.033, 29.1 )
shape = SubResource( 1 )

[node name="detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="detection_collide" type="CollisionShape2D" parent="detection"]
position = Vector2( 30.3721, 31.3779 )
shape = SubResource( 2 )
[connection signal="gui_input" from="z_index/item" to="z_index/item" method="_on_item_gui_input"]
[connection signal="mouse_entered" from="z_index/item" to="z_index/item" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="z_index/item" to="z_index/item" method="_on_item_mouse_exited"]
[connection signal="area_entered" from="z_index/item/cursor" to="z_index/item" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="z_index/item/cursor" to="z_index/item" method="_on_Area2D_area_exited"]
